Fixes after API changes
