# csharp-net35/src/Sphereon.SDK.Blockchain.Proof/Api/RegistrationApi.cs
@@ -234,7 +234,7 @@ namespace Sphereon.SDK.Blockchain.Proof.Api
             if (existence == null)
                 throw new ApiException(400, "Missing required parameter 'existence' when calling RegistrationApi->RegisterUsingContent");
 
-            var localVarPath = "/blockchain/proof/0.9/existence/{configName}/content";
+            var localVarPath = "/existence/{configName}/content";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -320,7 +320,7 @@ namespace Sphereon.SDK.Blockchain.Proof.Api
             if (streamLocations == null)
                 throw new ApiException(400, "Missing required parameter 'streamLocations' when calling RegistrationApi->RegisterUsingLocation");
 
-            var localVarPath = "/blockchain/proof/0.9/existence/{configName}/streams/location";
+            var localVarPath = "/existence/{configName}/streams/location";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
@@ -406,7 +406,7 @@ namespace Sphereon.SDK.Blockchain.Proof.Api
             if (stream == null)
                 throw new ApiException(400, "Missing required parameter 'stream' when calling RegistrationApi->RegisterUsingStream");
 
-            var localVarPath = "/blockchain/proof/0.9/existence/{configName}/streams/multipart";
+            var localVarPath = "/existence/{configName}/streams/multipart";
             var localVarPathParams = new Dictionary<String, String>();
             var localVarQueryParams = new Dictionary<String, String>();
             var localVarHeaderParams = new Dictionary<String, String>(Configuration.DefaultHeader);
