# swagger.sdk.json
@@ -1,93 +1,7 @@
 {
-  "basePath": "/",
+  "basePath": "/blockchain/proof/0.9",
   "paths": {
-    "/blockchain/proof/0.9/existence/{configName}/streams/location": {
-      "post": {
-        "summary": "Verify hash using the Storage API",
-        "security": [{"oauth2schema": ["global"]}],
-        "produces": ["application/json;charset=UTF-8"],
-        "description": "Verify a hash of file/blob by supplying a Stream location of the Storage API. This Stream Location maps to a location of a file/blob on some remote cloud storage. Hashing will be done on the server side Please note that the binary data itself will not be stored, only the hash. Use the registerUsingContent endpoint if you'd like to store content",
-        "operationId": "verifyUsingLocation",
-        "responses": {
-          "200": {
-            "schema": {"$ref": "#/definitions/VerifyContentResponse"},
-            "description": "Content exists"
-          },
-          "400": {
-            "schema": {"$ref": "#/definitions/ErrorResponse"},
-            "description": "Invalid verification request"
-          },
-          "404": {
-            "schema": {"$ref": "#/definitions/VerifyContentResponse"},
-            "description": "Content does not exist"
-          }
-        },
-        "parameters": [
-          {
-            "in": "path",
-            "name": "configName",
-            "description": "The context for this operation",
-            "type": "string",
-            "required": true
-          },
-          {
-            "schema": {
-              "type": "array",
-              "items": {"$ref": "#/definitions/StreamLocation"}
-            },
-            "in": "body",
-            "name": "streamLocations",
-            "description": "The stream locations on storage",
-            "required": true
-          }
-        ],
-        "tags": ["Verification"],
-        "consumes": ["application/json;charset=UTF-8"]
-      },
-      "put": {
-        "summary": "Register hash using the Storage API",
-        "security": [{"oauth2schema": ["global"]}],
-        "produces": ["application/json;charset=UTF-8"],
-        "description": "Register a hash of file/blob by supplying a Stream location of the Storage API. This Stream Location maps to a location of a file/blob on some remote cloud storage. Hashing will be done on the server side Please note that the binary data itself will not be stored, only the hash. Use the registerUsingContent endpoint if you'd like to store content",
-        "operationId": "registerUsingLocation",
-        "responses": {
-          "200": {
-            "schema": {"$ref": "#/definitions/RegisterContentResponse"},
-            "description": "Content already registered"
-          },
-          "400": {
-            "schema": {"$ref": "#/definitions/ErrorResponse"},
-            "description": "Invalid registration request"
-          },
-          "202": {
-            "schema": {"$ref": "#/definitions/RegisterContentResponse"},
-            "description": "Registration request received"
-          }
-        },
-        "parameters": [
-          {
-            "in": "path",
-            "name": "configName",
-            "description": "The configuration name this operation",
-            "type": "string",
-            "required": true
-          },
-          {
-            "schema": {
-              "type": "array",
-              "items": {"$ref": "#/definitions/StreamLocation"}
-            },
-            "in": "body",
-            "name": "streamLocations",
-            "description": "The stream locations on storage",
-            "required": true
-          }
-        ],
-        "tags": ["Registration"],
-        "consumes": ["application/json;charset=UTF-8"]
-      }
-    },
-    "/blockchain/proof/0.9/existence/{configName}/content": {
+    "/existence/{configName}/content": {
       "post": {
         "summary": "Verify content",
         "security": [{"oauth2schema": ["global"]}],
@@ -163,37 +77,7 @@
         "consumes": ["application/json;charset=UTF-8"]
       }
     },
-    "/blockchain/proof/0.9/config": {"post": {
-      "summary": "Create a new configuration",
-      "security": [{"oauth2schema": ["global"]}],
-      "produces": ["application/json;charset=UTF-8"],
-      "description": "Create a new configuration",
-      "operationId": "createConfiguration",
-      "responses": {
-        "200": {
-          "schema": {"$ref": "#/definitions/ConfigurationResponse"},
-          "description": "Configuration already exists"
-        },
-        "400": {
-          "schema": {"$ref": "#/definitions/ErrorResponse"},
-          "description": "Invalid configuration request"
-        },
-        "202": {
-          "schema": {"$ref": "#/definitions/ConfigurationResponse"},
-          "description": "Configuration request received"
-        }
-      },
-      "parameters": [{
-        "schema": {"$ref": "#/definitions/CreateConfiguration"},
-        "in": "body",
-        "name": "request",
-        "description": "Create a new Proof of Existence context using the provided entity settings",
-        "required": true
-      }],
-      "tags": ["Configuration"],
-      "consumes": ["application/json;charset=UTF-8"]
-    }},
-    "/blockchain/proof/0.9/existence/{configName}/streams/multipart": {
+    "/existence/{configName}/streams/multipart": {
       "post": {
         "summary": "Verify bytestream/file hash",
         "security": [{"oauth2schema": ["global"]}],
@@ -203,15 +87,11 @@
         "responses": {
           "200": {
             "schema": {"$ref": "#/definitions/VerifyContentResponse"},
-            "description": "Content exists"
+            "description": "Content exists or not"
           },
           "400": {
             "schema": {"$ref": "#/definitions/ErrorResponse"},
             "description": "Invalid verification request"
-          },
-          "404": {
-            "schema": {"$ref": "#/definitions/VerifyContentResponse"},
-            "description": "Content does not exist"
           }
         },
         "parameters": [
@@ -273,7 +153,119 @@
         "consumes": ["multipart/form-data"]
       }
     },
-    "/blockchain/proof/0.9/config/{configName}": {"get": {
+    "/config": {"post": {
+      "summary": "Create a new configuration",
+      "security": [{"oauth2schema": ["global"]}],
+      "produces": ["application/json;charset=UTF-8"],
+      "description": "Create a new configuration",
+      "operationId": "createConfiguration",
+      "responses": {
+        "200": {
+          "schema": {"$ref": "#/definitions/ConfigurationResponse"},
+          "description": "Configuration already exists"
+        },
+        "400": {
+          "schema": {"$ref": "#/definitions/ErrorResponse"},
+          "description": "Invalid configuration request"
+        },
+        "202": {
+          "schema": {"$ref": "#/definitions/ConfigurationResponse"},
+          "description": "Configuration request received"
+        }
+      },
+      "parameters": [{
+        "schema": {"$ref": "#/definitions/CreateConfigurationRequest"},
+        "in": "body",
+        "name": "request",
+        "description": "Create a new Proof of Existence context using the provided entity settings",
+        "required": true
+      }],
+      "tags": ["Configuration"],
+      "consumes": ["application/json;charset=UTF-8"]
+    }},
+    "/existence/{configName}/streams/location": {
+      "post": {
+        "summary": "Verify hash using the Storage API",
+        "security": [{"oauth2schema": ["global"]}],
+        "produces": ["application/json;charset=UTF-8"],
+        "description": "Verify a hash of file/blob by supplying a Stream location of the Storage API. This Stream Location maps to a location of a file/blob on some remote cloud storage. Hashing will be done on the server side Please note that the binary data itself will not be stored, only the hash. Use the registerUsingContent endpoint if you'd like to store content",
+        "operationId": "verifyUsingLocation",
+        "responses": {
+          "200": {
+            "schema": {"$ref": "#/definitions/VerifyContentResponse"},
+            "description": "Content exists or not"
+          },
+          "400": {
+            "schema": {"$ref": "#/definitions/ErrorResponse"},
+            "description": "Invalid verification request"
+          }
+        },
+        "parameters": [
+          {
+            "in": "path",
+            "name": "configName",
+            "description": "The context for this operation",
+            "type": "string",
+            "required": true
+          },
+          {
+            "schema": {
+              "type": "array",
+              "items": {"$ref": "#/definitions/StreamLocation"}
+            },
+            "in": "body",
+            "name": "streamLocations",
+            "description": "The stream locations on storage",
+            "required": true
+          }
+        ],
+        "tags": ["Verification"],
+        "consumes": ["application/json;charset=UTF-8"]
+      },
+      "put": {
+        "summary": "Register hash using the Storage API",
+        "security": [{"oauth2schema": ["global"]}],
+        "produces": ["application/json;charset=UTF-8"],
+        "description": "Register a hash of file/blob by supplying a Stream location of the Storage API. This Stream Location maps to a location of a file/blob on some remote cloud storage. Hashing will be done on the server side Please note that the binary data itself will not be stored, only the hash. Use the registerUsingContent endpoint if you'd like to store content",
+        "operationId": "registerUsingLocation",
+        "responses": {
+          "200": {
+            "schema": {"$ref": "#/definitions/RegisterContentResponse"},
+            "description": "Content already registered"
+          },
+          "400": {
+            "schema": {"$ref": "#/definitions/ErrorResponse"},
+            "description": "Invalid registration request"
+          },
+          "202": {
+            "schema": {"$ref": "#/definitions/RegisterContentResponse"},
+            "description": "Registration request received"
+          }
+        },
+        "parameters": [
+          {
+            "in": "path",
+            "name": "configName",
+            "description": "The configuration name this operation",
+            "type": "string",
+            "required": true
+          },
+          {
+            "schema": {
+              "type": "array",
+              "items": {"$ref": "#/definitions/StreamLocation"}
+            },
+            "in": "body",
+            "name": "streamLocations",
+            "description": "The stream locations on storage",
+            "required": true
+          }
+        ],
+        "tags": ["Registration"],
+        "consumes": ["application/json;charset=UTF-8"]
+      }
+    },
+    "/config/{configName}": {"get": {
       "summary": "Get configuration",
       "security": [{"oauth2schema": ["global"]}],
       "produces": ["application/json;charset=UTF-8"],
@@ -304,10 +296,10 @@
       "consumes": ["application/json"]
     }}
   },
-  "host": "gw-dev.api.cloud.sphereon.com",
+  "host": "gw.api.cloud.sphereon.com",
   "schemes": ["https"],
   "securityDefinitions": {"oauth2schema": {
-    "tokenUrl": "https://gw-dev.api.cloud.sphereon.com/token",
+    "tokenUrl": "https://gw.api.cloud.sphereon.com/token",
     "scopes": {"global": "accessEverything"},
     "type": "oauth2",
     "flow": "application"
@@ -362,10 +354,15 @@
         "chainConfiguration",
         "chainSettings",
         "context",
+        "id",
         "settingsChain",
         "validFrom"
       ],
       "properties": {
+        "singleProofChain": {
+          "readOnly": true,
+          "$ref": "#/definitions/CommittedChain"
+        },
         "settingsChain": {
           "readOnly": true,
           "$ref": "#/definitions/CommittedChain"
@@ -382,16 +379,16 @@
           "readOnly": true,
           "$ref": "#/definitions/ChainConfiguration"
         },
+        "id": {
+          "readOnly": true,
+          "type": "string"
+        },
         "validFrom": {
           "format": "date-time",
           "readOnly": true,
           "type": "string"
         },
         "metaDataChain": {
-          "readOnly": true,
-          "$ref": "#/definitions/CommittedChain"
-        },
-        "proofChain": {
           "readOnly": true,
           "$ref": "#/definitions/CommittedChain"
         }
@@ -443,23 +440,23 @@
           "readOnly": true,
           "type": "string"
         },
+        "singleProofChain": {
+          "description": "The proof chain id linked to the current configuration. This is a shared proof chain for all registrations",
+          "type": "string"
+        },
         "contentRegistrationChains": {
           "description": "A set of content registration targets",
           "type": "array",
           "items": {
             "type": "string",
             "enum": [
-              "FILE_CHAIN",
-              "PROOF_CHAIN"
+              "PER_HASH_PROOF_CHAIN",
+              "SINGLE_PROOF_CHAIN"
             ]
           }
         },
-        "proofChainId": {
-          "description": "The proof chain id linked to the current configuration",
-          "type": "string"
-        },
         "metadataRegistrationChains": {
-          "description": "A set of metadata registration targets",
+          "description": "A set of metadata registration targets (not in use currently)",
           "type": "array",
           "items": {
             "type": "string",
@@ -477,7 +474,7 @@
           "enum": [1]
         },
         "hashAlgorithm": {
-          "description": "The hashing method used for the content",
+          "description": "The hashing method used for the content. We always return and expect the hash in HEX form",
           "type": "string",
           "enum": [
             "SHA_256",
@@ -489,21 +486,13 @@
     "ChainConfiguration": {
       "type": "object",
       "required": [
-        "accessLevel",
+        "accessMode",
         "context",
         "id",
         "name",
         "settingChainId"
       ],
       "properties": {
-        "accessLevel": {
-          "readOnly": true,
-          "type": "string",
-          "enum": [
-            "PUBLIC",
-            "PRIVATE"
-          ]
-        },
         "context": {"type": "string"},
         "name": {
           "readOnly": true,
@@ -513,6 +502,14 @@
         "id": {
           "readOnly": true,
           "type": "string"
+        },
+        "accessMode": {
+          "readOnly": true,
+          "type": "string",
+          "enum": [
+            "PUBLIC",
+            "PRIVATE"
+          ]
         }
       }
     },
@@ -521,13 +518,19 @@
       "type": "object",
       "required": [
         "contextName",
-        "proofChain",
         "registrationState"
       ],
       "properties": {
         "contextName": {"type": "string"},
+        "singleProofChain": {
+          "description": "This is the single proof chain where all hashes are stored (if configured)",
+          "$ref": "#/definitions/CommittedChain"
+        },
         "requestId": {"type": "string"},
-        "proofChain": {"$ref": "#/definitions/CommittedChain"},
+        "perHashProofChain": {
+          "description": "This is the proof chain specific for the current hash (if configured)",
+          "$ref": "#/definitions/CommittedChain"
+        },
         "registrationState": {
           "type": "string",
           "enum": [
@@ -535,8 +538,7 @@
             "REGISTERED",
             "NOT_REGISTERED"
           ]
-        },
-        "fileChain": {"$ref": "#/definitions/CommittedChain"}
+        }
       }
     },
     "Error": {
@@ -561,6 +563,38 @@
         "message": {"type": "string"}
       }
     },
+    "CreateConfigurationRequest": {
+      "description": "Create a context configuration",
+      "type": "object",
+      "required": [
+        "accessMode",
+        "context",
+        "initialSettings",
+        "name"
+      ],
+      "properties": {
+        "initialSettings": {
+          "description": "The initial context settings.",
+          "$ref": "#/definitions/ChainSettings"
+        },
+        "context": {
+          "description": "The Easy Blockchain API context.",
+          "type": "string"
+        },
+        "name": {
+          "description": "The configuration name.",
+          "type": "string"
+        },
+        "accessMode": {
+          "description": "The access mode for this configuration. Public means accessible to other tenants of the API as well. Currently public is only allowed for Sphereon itself",
+          "type": "string",
+          "enum": [
+            "PUBLIC",
+            "PRIVATE"
+          ]
+        }
+      }
+    },
     "StreamLocation": {
       "description": "Location record of data stream",
       "type": "object",
@@ -573,37 +607,6 @@
         },
         "containerId": {"type": "string"},
         "originalFilename": {"type": "string"}
-      }
-    },
-    "CreateConfiguration": {
-      "description": "Create a context configuration",
-      "type": "object",
-      "required": [
-        "accessLevel",
-        "context",
-        "initialSettings",
-        "name"
-      ],
-      "properties": {
-        "initialSettings": {
-          "description": "The initial context settings.",
-          "$ref": "#/definitions/ChainSettings"
-        },
-        "accessLevel": {
-          "type": "string",
-          "enum": [
-            "PUBLIC",
-            "PRIVATE"
-          ]
-        },
-        "context": {
-          "description": "The blockchain context.",
-          "type": "string"
-        },
-        "name": {
-          "description": "The configuration name.",
-          "type": "string"
-        }
       }
     },
     "ErrorResponse": {
